Conform to checkstyle, add missing Javadocs. No functional change.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/jexl/trunk@397454 13f79535-47bb-0310-9956-ffa450edef68